[gd_scene load_steps=14 format=3 uid="uid://dlo15nt0pshop"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_55yhq"]
[ext_resource type="FontFile" uid="uid://oudit55que20" path="res://Resources/Fonts/PixelifySans-Bold.ttf" id="1_k0o2v"]
[ext_resource type="Texture2D" uid="uid://bp3ydapw15sal" path="res://Art/Sprites/Star.png" id="2_cnojy"]
[ext_resource type="PackedScene" uid="uid://d07mfdlil4jx8" path="res://Scenes/vhs.tscn" id="2_mq3yf"]
[ext_resource type="Texture2D" uid="uid://w2qw51ius4at" path="res://Art/Sprites/astralab.png" id="3_2uc78"]
[ext_resource type="Texture2D" uid="uid://cskdpfeiquinv" path="res://Art/Sprites/light.png" id="5_b7xvh"]
[ext_resource type="Texture2D" uid="uid://dutgwikxxoggt" path="res://Art/Sprites/PlayButton.png" id="5_ec82e"]
[ext_resource type="Texture2D" uid="uid://b7k1nluf0a53" path="res://Art/Sprites/ExitButton.png" id="5_iqd73"]
[ext_resource type="AudioStream" uid="uid://cs112tnud4jhc" path="res://Art/Sounds/click.wav" id="7_g81qw"]
[ext_resource type="AudioStream" uid="uid://bneyg48nedrc6" path="res://Art/Sounds/hover_off.wav" id="8_t2fdm"]
[ext_resource type="AudioStream" uid="uid://dd0v8coewsdp4" path="res://Art/Sounds/hover_on.wav" id="9_b3xsm"]
[ext_resource type="AudioStream" uid="uid://cr76nogsl7hdc" path="res://Art/Sounds/intro.wav" id="10_r3lqm"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nol4p"]
particle_flag_disable_z = true
gravity = Vector3(1, 0, 0)
linear_accel_min = 35.96
linear_accel_max = 100.0
scale_min = 2.0
scale_max = 8.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_55yhq")

[node name="VHS" parent="." instance=ExtResource("2_mq3yf")]
layout_mode = 1

[node name="StarNode" type="Node" parent="."]

[node name="Stars" type="GPUParticles2D" parent="StarNode"]
position = Vector2(-456, 30)
process_material = SubResource("ParticleProcessMaterial_nol4p")
texture = ExtResource("2_cnojy")
lifetime = 20.0
visibility_rect = Rect2(-1000, -1000, 2000, 2000)

[node name="Stars2" type="GPUParticles2D" parent="StarNode"]
position = Vector2(-402, 70)
process_material = SubResource("ParticleProcessMaterial_nol4p")
texture = ExtResource("2_cnojy")
lifetime = 20.0
visibility_rect = Rect2(-1000, -1000, 2000, 2000)

[node name="Stars3" type="GPUParticles2D" parent="StarNode"]
position = Vector2(-312, 154)
process_material = SubResource("ParticleProcessMaterial_nol4p")
texture = ExtResource("2_cnojy")
lifetime = 20.0
visibility_rect = Rect2(-1000, -1000, 2000, 2000)

[node name="Stars4" type="GPUParticles2D" parent="StarNode"]
position = Vector2(-458, 234)
process_material = SubResource("ParticleProcessMaterial_nol4p")
texture = ExtResource("2_cnojy")
lifetime = 20.0
visibility_rect = Rect2(-1000, -1000, 2000, 2000)

[node name="Stars5" type="GPUParticles2D" parent="StarNode"]
position = Vector2(-385, 317)
process_material = SubResource("ParticleProcessMaterial_nol4p")
texture = ExtResource("2_cnojy")
lifetime = 20.0
visibility_rect = Rect2(-1000, -1000, 2000, 2000)

[node name="Stars6" type="GPUParticles2D" parent="StarNode"]
position = Vector2(-163, 395)
process_material = SubResource("ParticleProcessMaterial_nol4p")
texture = ExtResource("2_cnojy")
lifetime = 20.0
visibility_rect = Rect2(-1000, -1000, 2000, 2000)

[node name="Stars7" type="GPUParticles2D" parent="StarNode"]
position = Vector2(-27, 488)
process_material = SubResource("ParticleProcessMaterial_nol4p")
texture = ExtResource("2_cnojy")
lifetime = 20.0
visibility_rect = Rect2(-1000, -1000, 2000, 2000)

[node name="Stars8" type="GPUParticles2D" parent="StarNode"]
position = Vector2(-287, 551)
process_material = SubResource("ParticleProcessMaterial_nol4p")
texture = ExtResource("2_cnojy")
lifetime = 20.0
visibility_rect = Rect2(-1000, -1000, 2000, 2000)

[node name="Stars9" type="GPUParticles2D" parent="StarNode"]
position = Vector2(-446, 622)
process_material = SubResource("ParticleProcessMaterial_nol4p")
texture = ExtResource("2_cnojy")
lifetime = 20.0
visibility_rect = Rect2(-1000, -1000, 2000, 2000)

[node name="Title" type="Label" parent="."]
z_index = 5
layout_mode = 0
offset_left = 28.0
offset_top = 18.0
offset_right = 327.0
offset_bottom = 115.0
theme_override_colors/font_color = Color(0.188235, 0.376471, 0.509804, 1)
theme_override_colors/font_shadow_color = Color(0.12549, 0.145098, 0.278431, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("1_k0o2v")
theme_override_font_sizes/font_size = 80
text = "Gaia-07"

[node name="PointLight2D" type="PointLight2D" parent="Title"]
position = Vector2(155, 56)
texture = ExtResource("5_b7xvh")
texture_scale = 1.2

[node name="PlayButtonShadow" type="TextureRect" parent="."]
modulate = Color(0.219608, 0.219608, 0.219608, 1)
layout_mode = 0
offset_left = 42.0
offset_top = 548.0
offset_right = 122.0
offset_bottom = 588.0
scale = Vector2(2, 2)
texture = ExtResource("5_ec82e")
expand_mode = 3

[node name="PlayButton" type="TextureButton" parent="."]
z_index = 1
layout_mode = 0
offset_left = 34.0
offset_top = 540.0
offset_right = 66.0
offset_bottom = 556.0
scale = Vector2(5, 5)
texture_normal = ExtResource("5_ec82e")
texture_pressed = ExtResource("5_ec82e")
texture_hover = ExtResource("5_ec82e")
texture_disabled = ExtResource("5_ec82e")
texture_focused = ExtResource("5_ec82e")
stretch_mode = 3

[node name="PointLight2D" type="PointLight2D" parent="PlayButton"]
position = Vector2(2.8, -8)
texture = ExtResource("5_b7xvh")
texture_scale = 0.3

[node name="ExitButtonShadow" type="TextureRect" parent="."]
modulate = Color(0.219608, 0.219608, 0.219608, 1)
layout_mode = 0
offset_left = 998.0
offset_top = 544.0
offset_right = 1078.0
offset_bottom = 584.0
scale = Vector2(2, 2)
texture = ExtResource("5_iqd73")
expand_mode = 3

[node name="ExitButton" type="TextureButton" parent="."]
z_index = 1
layout_mode = 0
offset_left = 990.0
offset_top = 536.0
offset_right = 1022.0
offset_bottom = 552.0
scale = Vector2(5, 5)
texture_normal = ExtResource("5_iqd73")
texture_pressed = ExtResource("5_iqd73")
texture_hover = ExtResource("5_iqd73")
texture_disabled = ExtResource("5_iqd73")
texture_focused = ExtResource("5_iqd73")
stretch_mode = 3

[node name="PointLight2D" type="PointLight2D" parent="ExitButton"]
position = Vector2(6.60001, -1.6)
texture = ExtResource("5_b7xvh")
texture_scale = 0.2

[node name="Splash" type="ColorRect" parent="."]
visible = false
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PointLight2D" type="PointLight2D" parent="Splash"]
position = Vector2(-77, 301)
color = Color(0.486275, 1, 1, 1)
energy = 4.35
texture = ExtResource("5_b7xvh")
texture_scale = 2.64

[node name="Astralab" type="TextureRect" parent="Splash"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -175.0
offset_right = 175.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_2uc78")

[node name="AstralabSubtext" type="Label" parent="Splash"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -534.0
offset_right = 352.0
offset_bottom = -437.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.262745, 0.262745, 0.262745, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("1_k0o2v")
theme_override_font_sizes/font_size = 80
text = "Made by Astralab"

[node name="AstralabSubtext2" type="Label" parent="Splash"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -269.0
offset_top = -209.0
offset_right = 271.0
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.262745, 0.262745, 0.262745, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("1_k0o2v")
theme_override_font_sizes/font_size = 50
text = "Game and Sim Project"

[node name="Sounds" type="Node" parent="."]

[node name="Click" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7_g81qw")

[node name="HoverOff" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_t2fdm")

[node name="HoverOn" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_b3xsm")

[node name="Intro" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("10_r3lqm")
pitch_scale = 0.55

[connection signal="button_down" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="PlayButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_button_mouse_exited"]
[connection signal="button_down" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="mouse_entered" from="ExitButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="ExitButton" to="." method="_on_button_mouse_exited"]
